fixed pagetrBuble overlapped by top bar, + fixes

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ html.is-rendering .transition-vh {
 
 #vhtrp {
     z-index: 1000;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
@@ -267,7 +267,8 @@ main#swup {
 
 
 @media (min-width: 728px) /* PC */ {
-    .navbtns-content svg.navicons {
+    .navbtns-content svg.navicons,
+    #nav-layerbg {
         display: none;
     }
     #nav-pos {
@@ -334,6 +335,18 @@ main#swup {
     .navbtns-content svg.navicons g {
         transform: scale(0.9);
     }
+
+    #nav-layerbg {
+        z-index: 999;
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 71px;
+        background-color: var(--bgpage);
+        transition: background-color 0.3s 0.4s ease;
+    }
+
 
     #content-container {
         margin-left: 0 !important;
